--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,7 @@
                 "-std=c++23",
                 "-fdiagnostics-color=always",
                 "-g",
+                // "${workspaceFolder}\\scene\\*.cpp",
                 "${workspaceFolder}\\src\\*.cpp",
                 "${workspaceFolder}\\*.cpp",
                 "-Isrc",
