--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,8 +8,8 @@
                 "-std=c++23",
                 "-fdiagnostics-color=always",
                 "-g",
-                // "${workspaceFolder}\\scene\\*.cpp",
                 "${workspaceFolder}\\src\\*.cpp",
+                // "${workspaceFolder}\\Scenes\\*.cpp",
                 "${workspaceFolder}\\*.cpp",
                 "-Isrc",
                 "-Iinclude",
